--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 <p></p>
 <h1>Vice Versa</h1>
-<form>
-    <textarea cols="50" rows="10"></textarea>
+<form action="{% url 'reverse' %}">
+    <textarea cols="50" rows="10" name="usertext"></textarea>
     <br><br>
     <input type="submit" value="Reverse!">
 </form>
