--- a/templates/reverse.html
+++ b/templates/reverse.html
@@ -1,4 +1,4 @@
-<h1>Original text</h1>
+<h1>Original text has {{count}} words</h1>
 <div style="margin-left: 20px">{{usertext}}</div>
 
 <h1>Reversed text</h1>
